feature/KAA-332 conection pool added